--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>GreatAndhra.com</title>            
+        <title>Prasainformatics.com</title>            
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,7 +31,7 @@
 
             <!-- START BREADCRUMB -->
             <ul class="breadcrumb">
-                <li><a href="http://greatandhra.com">Back</a></li>                    
+                <li><a href="http://krazyoffers.in">Back</a></li>                    
                 <li class="active">Analytics</li>
             </ul>
             <!-- END BREADCRUMB -->
