--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                                 <h2><span class="fa fa-twitter"></span> Latest Tweets</h2>
                                 <div class="user">
                                     <img src="https://pbs.twimg.com/profile_images/1154913141/small1.jpg" alt="Nadia Ali">
-                                    <a href="https://twitter.com/venkat_ga" class="name">@venkat_ga</a>
+                                    <a href="https://twitter.com/prasainformatics" class="name">@prasainformatics</a>
                                     <div class="pull-right" style="width: 100px;">
                                         <button class="btn btn-info btn-block"><span class="fa fa-twitter"></span> Follow</button>
                                     </div>
